// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar component renders by default no breadcrumbs, no bulkactions, no sharesnavigation but viewoptions and sidebartoggle 1`] = `
<div class="" displayviewmodeswitch="false" id="files-app-bar">
  <!--v-if-->
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-middle files-app-bar-controls oc-flex-right">
      <!--v-if-->
      <portal-target name="app.runtime.mobile.nav"></portal-target>
      <!--v-if-->
      <div class="oc-flex" id="files-app-bar-controls-right">
        <view-options-stub hasfileextensions="true" hashiddenfiles="true" haspagination="true" paginationoptions="20,50,100,250,500" perpagedefault="100" perpagequeryname="items-per-page" perpagestorageprefix="files" viewmodedefault="resource-table" viewmodes=""></view-options-stub>
        <sidebar-toggle-stub issidebaropen="false"></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start oc-flex-middle">
        <!-- HACK: vue-tsc thinks BatchActions is of type FileAction[], the empty bind (currently) workarounds the resulting error -->
        <!--v-if-->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders if given, with content in the actions slot 1`] = `
<div class="" displayviewmodeswitch="false" id="files-app-bar">
  <!--v-if-->
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-middle files-app-bar-controls oc-flex-right">
      <!--v-if-->
      <portal-target name="app.runtime.mobile.nav"></portal-target>
      <!--v-if-->
      <div class="oc-flex" id="files-app-bar-controls-right">
        <view-options-stub hasfileextensions="true" hashiddenfiles="true" haspagination="true" paginationoptions="20,50,100,250,500" perpagedefault="100" perpagequeryname="items-per-page" perpagestorageprefix="files" viewmodedefault="resource-table" viewmodes=""></view-options-stub>
        <sidebar-toggle-stub issidebaropen="false"></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start oc-flex-middle">
        <button class="action-slot">Click</button> <!-- HACK: vue-tsc thinks BatchActions is of type FileAction[], the empty bind (currently) workarounds the resulting error -->
        <!--v-if-->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders if given, with content in the content slot 1`] = `
<div class="" displayviewmodeswitch="false" id="files-app-bar">
  <!--v-if-->
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-middle files-app-bar-controls oc-flex-right">
      <!--v-if-->
      <portal-target name="app.runtime.mobile.nav"></portal-target>
      <!--v-if-->
      <div class="oc-flex" id="files-app-bar-controls-right">
        <view-options-stub hasfileextensions="true" hashiddenfiles="true" haspagination="true" paginationoptions="20,50,100,250,500" perpagedefault="100" perpagequeryname="items-per-page" perpagestorageprefix="files" viewmodedefault="resource-table" viewmodes=""></view-options-stub>
        <sidebar-toggle-stub issidebaropen="false"></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start oc-flex-middle">
        <!-- HACK: vue-tsc thinks BatchActions is of type FileAction[], the empty bind (currently) workarounds the resulting error -->
        <!--v-if-->
      </div>
    </div>
    <div class="content-slot">Foo</div>
  </div>
</div>
`;
